# actix-web

./: .env  Cargo.toml  README.md
migrations/2019-07-12-032519_create_roles/: up.sql
migrations/2019-07-25-021827_create_user/: up.sql
migrations/2019-08-06-034440_add_comments/: down.sql  up.sql
migrations/2019-08-08-080440_create_couses/: down.sql  up.sql
migrations/2019-08-08-093638_add_categories/: up.sql
src/: db_connection.rs  errors.rs  main.rs  schema.rs
src/handlers/: authentication.rs  categories.rs  comments.rs  mod.rs  register.rs  roles.rs
src/models/: category.rs  comment.rs  course.rs  mod.rs  role.rs  user.rs  user_course.rs
src/upload/: image.rs
src/utils/: jwt.rs
